# goudacell

./: .gitignore  README.md  description_example.txt  environment.yml  napari_env.yml  pyproject.toml
notebooks/: segmentation.ipynb
scripts/: jupyter_gpu.sh  run_segmentation.sh
src/goudacell/: __init__.py  cli.py  config.py  cp_emulator.py  feature_table_utils.py  features.py  io.py  segment.py  viz.py
